--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 future==0.18.3
 idna==3.7
+pathvalidate==3.2.0
 py-linq==1.4.0
 python-dateutil==2.9.0.post0
 requests==2.31.0
